--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install dependencies
-        run: pip install mkdocs>=1.6.0 mkdocs-material>=9.6.0 mkdocstrings[python]>=0.28.0 mkdocs-static-i18n>=1.3.0
+        run: pip install "mkdocs>=1.6.0" "mkdocs-material>=9.6.0" "mkdocstrings[python]>=0.28.0" "mkdocs-static-i18n>=1.3.0"
 
       - name: Build with MkDocs
         run: mkdocs build
