--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "homepage": "https://github.com/yusuf-eren/openai-agents-js#readme",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.11.0",
+    "axios": "^1.9.0",
     "dotenv": "^16.4.7",
     "graphviz": "^0.0.9",
     "openai": "^4.94.0",
